@@ -1,0 +1,313 @@
+
+     Program PWSCF v.5.1 (svn rev. 11032M) starts on  6Jun2014 at 17:21:37 
+
+     This program is part of the open-source Quantum ESPRESSO suite
+     for quantum simulation of materials; please cite
+         "P. Giannozzi et al., J. Phys.:Condens. Matter 21 395502 (2009);
+          URL http://www.quantum-espresso.org", 
+     in publications or presentations arising from this work. More details at
+     http://www.quantum-espresso.org/quote
+
+     Parallel version (MPI), running on     2 processors
+     R & G space division:  proc/nbgrp/npool/nimage =       2
+     Reading input from /home/giannozz/trunk/espresso/PW/tests/vdw6.in
+
+     Current dimensions of program PWSCF are:
+     Max number of different atomic species (ntypx) = 10
+     Max number of k-points (npk) =  40000
+     Max angular momentum in pseudopotentials (lmaxx) =  3
+
+     IMPORTANT: XC functional enforced from input :
+     Exchange-correlation      = RVV10 ( 1  4 13  4 3)
+     Any further DFT definition will be discarded
+     Please, verify this is what you really want
+
+
+     gamma-point specific algorithms are used
+
+     Subspace diagonalization in iterative solution of the eigenvalue problem:
+     a serial algorithm will be used
+
+ 
+     Parallelization info
+     --------------------
+     sticks:   dense  smooth     PW     G-vecs:    dense   smooth      PW
+     Min         150      54     15                 5457     1166     143
+     Max         151      55     16                 5458     1183     144
+     Sum         301     109     31                10915     2349     287
+     Tot         151      55     16
+ 
+
+
+     bravais-lattice index     =            4
+     lattice parameter (alat)  =       4.6600  a.u.
+     unit-cell volume          =     227.8567 (a.u.)^3
+     number of atoms/cell      =            4
+     number of atomic types    =            1
+     number of electrons       =        16.00
+     number of Kohn-Sham states=           12
+     kinetic-energy cutoff     =      18.0000  Ry
+     charge density cutoff     =     200.0000  Ry
+     convergence threshold     =      1.0E-06
+     mixing beta               =       0.5000
+     number of iterations used =           20  plain     mixing
+     Exchange-correlation      = RVV10 ( 1  4 13  4 3)
+
+     celldm(1)=   4.660000  celldm(2)=   0.000000  celldm(3)=   2.600000
+     celldm(4)=   0.000000  celldm(5)=   0.000000  celldm(6)=   0.000000
+
+     crystal axes: (cart. coord. in units of alat)
+               a(1) = (   1.000000   0.000000   0.000000 )  
+               a(2) = (  -0.500000   0.866025   0.000000 )  
+               a(3) = (   0.000000   0.000000   2.600000 )  
+
+     reciprocal axes: (cart. coord. in units 2 pi/alat)
+               b(1) = (  1.000000  0.577350  0.000000 )  
+               b(2) = (  0.000000  1.154701  0.000000 )  
+               b(3) = (  0.000000  0.000000  0.384615 )  
+
+
+     PseudoPot. # 1 for C  read from file:
+     /home/giannozz/trunk/espresso/pseudo/C.pbe-van_bm.UPF
+     MD5 check sum: 1a69bf6b8db32088f5b2163dbdb77a27
+     Pseudo is Ultrasoft, Zval =  4.0
+     Generated by new atomic code, or converted to UPF format
+     Using radial grid of  721 points,  4 beta functions with: 
+                l(1) =   0
+                l(2) =   0
+                l(3) =   1
+                l(4) =   1
+     Q(r) pseudized with  8 coefficients,  rinner =    0.800   0.800   0.800
+
+
+     vdW kernel table read from file rVV10_kernel_table
+     MD5 check sum: af6aee61c9dcb90bb607a924718cc816
+
+     atomic species   valence    mass     pseudopotential
+        C              4.00    12.00000     C ( 1.00)
+
+      8 Sym. Ops., with inversion, found ( 4 have fractional translation)
+
+
+
+   Cartesian axes
+
+     site n.     atom                  positions (alat units)
+         1           C   tau(   1) = (  -0.5000000   0.8660254   1.9500000  )
+         2           C   tau(   2) = (   0.5000050   0.2886722   1.9500000  )
+         3           C   tau(   3) = (  -0.5000000   0.8660254   0.6500000  )
+         4           C   tau(   4) = (  -0.0000050   0.5773532   0.6500000  )
+
+     number of k points=     1  Marzari-Vanderbilt smearing, width (Ry)=  0.0200
+                       cart. coord. in units 2pi/alat
+        k(    1) = (   0.0000000   0.0000000   0.0000000), wk =   2.0000000
+
+     Dense  grid:     5458 G-vectors     FFT dimensions: (  24,  24,  60)
+
+     Smooth grid:     1175 G-vectors     FFT dimensions: (  15,  15,  36)
+
+     Largest allocated arrays     est. size (Mb)     dimensions
+        Kohn-Sham Wavefunctions         0.01 Mb     (      72,   12)
+        NL pseudopotentials             0.04 Mb     (      72,   32)
+        Each V/rho on FFT grid          0.26 Mb     (   17280)
+        Each G-vector array             0.02 Mb     (    2729)
+        G-vector shells                 0.00 Mb     (     616)
+     Largest temporary arrays     est. size (Mb)     dimensions
+        Auxiliary wavefunctions         0.03 Mb     (      72,   48)
+        Each subspace H/S matrix        0.02 Mb     (      48,   48)
+        Each <psi_i|beta_j> matrix      0.00 Mb     (      32,   12)
+        Arrays for rho mixing           5.27 Mb     (   17280,   20)
+
+     Initial potential from superposition of free atoms
+
+     starting charge   15.99984, renormalised to   16.00000
+
+
+---------------------------------------------------------------------------------
+Carrying out rVV10 run using the following parameters:
+
+Nqs =      20    Nr_points =    1024   r_max =   100.000
+b_value =  6.30000
+beta =  0.00901
+q_mesh =       0.00010000
+     0.00030000
+     0.00058939
+     0.00100810
+     0.00161396
+     0.00249058
+     0.00375900
+     0.00559430
+     0.00824984
+     0.01209221
+     0.01765183
+     0.02569619
+     0.03733578
+     0.05417739
+     0.07854596
+     0.11380545
+     0.16482331
+     0.23864234
+     0.34545298
+     0.50000000
+
+Gradients computed in Reciprocal space
+
+---------------------------------------------------------------------------------
+
+
+     Starting wfc are   16 randomized atomic wfcs
+
+     total cpu time spent up to now is        0.4 secs
+
+     per-process dynamical memory:    22.5 Mb
+
+     Self-consistent Calculation
+
+     iteration #  1     ecut=    18.00 Ry     beta=0.50
+     Davidson diagonalization with overlap
+     ethr =  1.00E-02,  avg # of iterations =  3.0
+
+     total cpu time spent up to now is        0.6 secs
+
+     total energy              =     -44.23244249 Ry
+     Harris-Foulkes estimate   =     -44.49859857 Ry
+     estimated scf accuracy    <       0.69517129 Ry
+
+     iteration #  2     ecut=    18.00 Ry     beta=0.50
+     Davidson diagonalization with overlap
+     ethr =  4.34E-03,  avg # of iterations =  2.0
+
+     total cpu time spent up to now is        0.7 secs
+
+     total energy              =     -44.23229619 Ry
+     Harris-Foulkes estimate   =     -44.26735390 Ry
+     estimated scf accuracy    <       0.09876274 Ry
+
+     iteration #  3     ecut=    18.00 Ry     beta=0.50
+     Davidson diagonalization with overlap
+     ethr =  6.17E-04,  avg # of iterations =  2.0
+
+     total cpu time spent up to now is        0.9 secs
+
+     total energy              =     -44.24234113 Ry
+     Harris-Foulkes estimate   =     -44.24208561 Ry
+     estimated scf accuracy    <       0.00349276 Ry
+
+     iteration #  4     ecut=    18.00 Ry     beta=0.50
+     Davidson diagonalization with overlap
+     ethr =  2.18E-05,  avg # of iterations =  2.0
+
+     total cpu time spent up to now is        1.0 secs
+
+     total energy              =     -44.24253078 Ry
+     Harris-Foulkes estimate   =     -44.24254566 Ry
+     estimated scf accuracy    <       0.00006155 Ry
+
+     iteration #  5     ecut=    18.00 Ry     beta=0.50
+     Davidson diagonalization with overlap
+     ethr =  3.85E-07,  avg # of iterations =  2.0
+
+     total cpu time spent up to now is        1.2 secs
+
+     total energy              =     -44.24255284 Ry
+     Harris-Foulkes estimate   =     -44.24254740 Ry
+     estimated scf accuracy    <       0.00000519 Ry
+
+     iteration #  6     ecut=    18.00 Ry     beta=0.50
+     Davidson diagonalization with overlap
+     ethr =  3.24E-08,  avg # of iterations =  1.0
+
+     total cpu time spent up to now is        1.3 secs
+
+     End of self-consistent calculation
+
+          k = 0.0000 0.0000 0.0000 (   144 PWs)   bands (ev):
+
+   -11.6883 -11.2186  -0.8767   1.7576   5.6327   5.6331   5.7882   5.7886
+    11.9223  16.8517  16.8523  16.8863
+
+     the Fermi energy is    10.0148 ev
+
+!    total energy              =     -44.24255513 Ry
+     Harris-Foulkes estimate   =     -44.24255320 Ry
+     estimated scf accuracy    <       0.00000037 Ry
+
+     The total energy is the sum of the following terms:
+
+     one-electron contribution =      -6.74698325 Ry
+     hartree contribution      =      12.74684113 Ry
+     xc contribution           =     -14.36996320 Ry
+     ewald contribution        =     -35.87244982 Ry
+     smearing contrib. (-TS)   =       0.00000000 Ry
+
+     convergence has been achieved in   6 iterations
+
+     Forces acting on atoms (Ry/au):
+
+     atom    1 type  1   force =     0.00008321   -0.00004804    0.00000000
+     atom    2 type  1   force =    -0.00001573    0.00000908    0.00000000
+     atom    3 type  1   force =    -0.00008321    0.00004804    0.00000000
+     atom    4 type  1   force =     0.00001573   -0.00000908    0.00000000
+
+     Total force =     0.000138     Total SCF correction =     0.000083
+     SCF correction compared to forces is large: reduce conv_thr to get better values
+
+
+     entering subroutine stress ...
+
+          total   stress  (Ry/bohr**3)                   (kbar)     P= -358.83
+  -0.00267734  -0.00000022   0.00000000       -393.85     -0.03      0.00
+  -0.00000022  -0.00267760   0.00000000         -0.03   -393.89      0.00
+   0.00000000   0.00000000  -0.00196290          0.00      0.00   -288.75
+
+
+     Writing output data file pwscf.save
+ 
+     init_run     :      0.22s CPU      0.23s WALL (       1 calls)
+     electrons    :      0.91s CPU      0.92s WALL (       1 calls)
+     forces       :      0.02s CPU      0.02s WALL (       1 calls)
+     stress       :      0.22s CPU      0.22s WALL (       1 calls)
+
+     Called by init_run:
+     wfcinit      :      0.00s CPU      0.00s WALL (       1 calls)
+     potinit      :      0.13s CPU      0.14s WALL (       1 calls)
+
+     Called by electrons:
+     c_bands      :      0.02s CPU      0.02s WALL (       6 calls)
+     sum_band     :      0.05s CPU      0.05s WALL (       6 calls)
+     v_of_rho     :      0.88s CPU      0.91s WALL (       7 calls)
+     newd         :      0.04s CPU      0.04s WALL (       7 calls)
+     mix_rho      :      0.02s CPU      0.01s WALL (       6 calls)
+
+     Called by c_bands:
+     init_us_2    :      0.00s CPU      0.00s WALL (      13 calls)
+     regterg      :      0.02s CPU      0.02s WALL (       6 calls)
+
+     Called by *egterg:
+     h_psi        :      0.02s CPU      0.02s WALL (      19 calls)
+     s_psi        :      0.00s CPU      0.00s WALL (      19 calls)
+     g_psi        :      0.00s CPU      0.00s WALL (      12 calls)
+     rdiaghg      :      0.00s CPU      0.01s WALL (      18 calls)
+
+     Called by h_psi:
+     add_vuspsi   :      0.00s CPU      0.00s WALL (      19 calls)
+
+     General routines
+     calbec       :      0.00s CPU      0.00s WALL (      30 calls)
+     fft          :      0.35s CPU      0.34s WALL (     510 calls)
+     ffts         :      0.00s CPU      0.00s WALL (      13 calls)
+     fftw         :      0.02s CPU      0.01s WALL (     222 calls)
+     interpolate  :      0.02s CPU      0.01s WALL (      13 calls)
+     davcio       :      0.00s CPU      0.00s WALL (       1 calls)
+ 
+     Parallel routines
+     fft_scatter  :      0.10s CPU      0.09s WALL (     745 calls)
+ 
+     PWSCF        :     1.76s CPU         2.06s WALL
+
+ 
+   This run was terminated on:  17:21:39   6Jun2014            
+
+=------------------------------------------------------------------------------=
+   JOB DONE.
+=------------------------------------------------------------------------------=
